; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_omp-low.c_lower_omp.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_omp-low.c_lower_omp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.walk_stmt_info = type { i32, i32, i32*, i32 }

@lower_omp_1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @lower_omp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lower_omp(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.walk_stmt_info, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = call i32 @memset(%struct.walk_stmt_info* %5, i32 0, i32 24)
  %7 = load i32, i32* @lower_omp_1, align 4
  %8 = getelementptr inbounds %struct.walk_stmt_info, %struct.walk_stmt_info* %5, i32 0, i32 3
  store i32 %7, i32* %8, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = getelementptr inbounds %struct.walk_stmt_info, %struct.walk_stmt_info* %5, i32 0, i32 2
  store i32* %9, i32** %10, align 8
  %11 = getelementptr inbounds %struct.walk_stmt_info, %struct.walk_stmt_info* %5, i32 0, i32 0
  store i32 1, i32* %11, align 8
  %12 = getelementptr inbounds %struct.walk_stmt_info, %struct.walk_stmt_info* %5, i32 0, i32 1
  store i32 1, i32* %12, align 4
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @walk_stmts(%struct.walk_stmt_info* %5, i32* %13)
  ret void
}

declare dso_local i32 @memset(%struct.walk_stmt_info*, i32, i32) #1

declare dso_local i32 @walk_stmts(%struct.walk_stmt_info*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
